--- a/export/lang/nl.json
+++ b/export/lang/nl.json
@@ -19,5 +19,35 @@
     "Muted by default": "Standaard gedempt",
     "Loop": "Automatisch herhalen",
     "Controls": "Bedieningsknoppen",
-    "Select options...": "Selecteer opties..."
+    "Select options...": "Selecteer opties...",
+    "Category": "Categorie",
+    "Manual": "Handmatig",
+    "Choose whether the frequently asked questions are loaded based on categories or manually selected.": "Kies hier of de veelgestelde vragen worden ingeladen obv categorieën of handmatig geselecteerd.",
+    "Categories": "Categorieën",
+    "Frequently asked questions": "Veelgestelde vragen",
+    "Mirror": "Spiegelen",
+    "Switch the position of the image with the text": "Wissel de positie van de afbeelding met de tekst",
+    "Add background color": "Achtergrond kleur toevoegen",
+    "Add a background color": "Voeg een achtergrond kleur toe",
+    "Form": "Formulier",
+    "Form - Submission text": "Formulier - Aanvraag verzonden tekst",
+    "Form - Redirect URL": "Formulier - Redirect URL",
+    "Leave empty to only show text after submitting the form.": "Laat leeg om alleen een tekst te tonen na het inzenden van het formulier.",
+    "Show sidebar content": "Toon sidebar content",
+    "Image": "Afbeelding",
+    "Text": "Tekst",
+    "Download attribute": "Download attribuut",
+    "Button options": "Knop opties",
+    "Icon position": "Icoon positie",
+    "Left": "Links",
+    "Right": "Rechts",
+    "Icons": "Iconen",
+    "Loading": "Laadmethode",
+    "Lazy loading": "Lazy laden",
+    "Eager loading": "Eager laden",
+    "Lazy loading is the default and will load the image when it is visible in the viewport. Eager loading will load the image when the page loads.": "Lazy laden is de standaard en zal de afbeelding laden wanneer deze zichtbaar is in de viewport. Eager laden zal de afbeelding laden wanneer de pagina wordt geladen.",
+    "Text + image": "Tekst + afbeelding",
+    "FAQ": "Veelgestelde vragen",
+    "Global component": "Globaal component",
+    "Normal": "Normaal"
 }
